remove .env.prod.example from there
